# VideoAlgorithms

./: .gitignore  CMakeLists.txt  README.md  config.json  config_HOME.json  config_NOVOICE.json  config_VIDEOTOIMAGE.json  config_ZUT.json
src/: changeresolution.cc  main.cc  mainNoVoice.cc  videoToImage.cc
